--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss build ./public/css/input.css -o ./public/css/output.css"
+    "build": "tailwindcss build -i ./public/css/input.css -o ./public/css/output.css"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "tailwind": "^4.0.0"
